# restopher

./: .gitignore  Cargo.toml  README.md
crates/restopher/: Cargo.toml
crates/restopher/src/: .gitignore  app.rs  collection.rs  env_replacer.rs  environments.rs  layout.rs  main.rs  main_windows.rs  models.rs  styles.rs
crates/restopher/src/components/: blocks.rs  error_popup.rs  multi_option.rs  pop_up.rs
crates/restopher/src/components/address_bar/: address.rs  mod.rs
crates/restopher/src/components/kv/: mod.rs
crates/restopher/src/components/requests/: mod.rs
crates/restopher/src/components/response_tab/: mod.rs  view.rs
crates/restopher/src/graphql/: mod.rs  models.rs  schema.rs
crates/restopher/src/graphql/ui/: mod.rs
crates/restopher/src/keys/: keys.rs
crates/restopher/src/request/: mod.rs  request.rs
crates/restopher/src/request/body/: mod.rs
crates/scrollable_widget/: Cargo.toml
crates/scrollable_widget/src/: lib.rs
src/: app.rs  collection.rs  environments.rs  layout.rs  logger.rs  main.rs  main_windows.rs  request.rs  response.rs  styles.rs  tree_states.rs
src/components/: blocks.rs  environments.rs  error_popup.rs  mod.rs  modifiers.rs  multi_option.rs  pop_up.rs  request_tabs.rs  response_tabs.rs  text_area.rs  text_box.rs  yes_no_popup.rs
src/components/address_bar/: address.rs  mod.rs  view.rs
src/components/kv/: mod.rs
src/components/request/: bundle.rs  mod.rs  request.rs  request_tabs.rs  response.rs  ui.rs  view.rs
src/components/request_tab/: mod.rs  request_tab.rs  view.rs
src/components/requests/: mod.rs
src/components/response_tab/: mod.rs  response_tab.rs  view.rs
src/keys/: keys.rs
src/request/: bundle.rs  mod.rs  request.rs  response.rs  view.rs
src/request/body/: mod.rs
src/utils/: app_state.rs  kv.rs  mod.rs  text_box.rs
