[package]
name = "restopher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = { package = "ratatui", version = "0.20.1"}
#ratatui = "*"
crossterm = "*"
reqwest = {version="0.11.16", features=["json"]}
tokio = { version = "1", features = ["full"] }
serde_json = "*"
serde = {version="1.0.160", features=["derive"]}
regex= "1"
tui-textarea = { git = "https://github.com/rhysd/tui-textarea.git", features = ["ratatui-crossterm"], default-features=false }
tree = { path="../tree"}
