[package]
name = "restopher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ratatui = "0.27"
crossterm = "*"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11.16", features = ["json"] }
tui-textarea = { version = "*", default-features = false, features = ["ratatui-crossterm"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "*"
regex = "1"
tui-tree-widget = "*"
